build: backend docker files

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 API_URL=https://api.jikan.moe/v4/top/anime
-DB_URL=<user>:<password>@tcp(<mysql_container>:3306)/<db_name>?parseTime=true
+DB_URL=<user>:<password>@tcp(<mysql-container-name>:3306)/<db_name>?parseTime=true
+MYSQL_ROOT_PASSWORD=<password>
+MYSQL_DATABASE=<db_name>
